add example from ng material docs

--- a/.gitignore
+++ b/.gitignore
@@ -1890,3 +1890,5 @@ frontend/target/classes/styles.31d6cfe0d16ae931b73c.css
 frontend/target/maven-archiver/pom.properties
 .vscode/settings.json
 frontend/target/classes/main.0d522bec8bd3b55995d1.js
+frontend/target/classes/main.f4a967714d3a2dd0acee.js
+frontend/target/classes/styles.b6c96e24457eccb4aa56.css
